[workspace]
members = ["teNOR"]
resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs (default true)
auto-includes = false
# Extra static files to include in each App (path relative to this Cargo.toml's dir)
include = ["fortISSimO.asm", "include/fortISSimO.inc", "include/hUGE_note_table.inc"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Publish jobs to run in CI
pr-run-mode = "plan"
