[package]
name = "teNOR"
description = "Exports hUGETracker `.uge` files for fortISSimO"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.8", features = ["derive", "cargo", "wrap_help"] }
nom = "7.1.3"
termcolor = "1.2.0"
