[package]
name = "teNOR"
description = "Exports hUGETracker `.uge` files for fortISSimO"
version = "1.0.0" # Make sure to update the version in `fortISSimO.asm` accordingly.
edition = "2021"
repository = "https://github.com/ISSOtm/fortISSimO"
license = "MPL-2.0"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
clap = { version = "4.1.8", features = ["derive", "cargo", "wrap_help"] }
nom = "7.1.3"
termcolor = "1.2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
auto-includes = false
include = ["../fortISSimO.asm", "../include/fortISSimO.inc", "../include/hUGE_note_table.inc"]
